# marketing-content_create-multi_agent

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  RUNBOOK.md  docker-compose.yml
ai-service/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
ai-service/.claude/: settings.local.json
ai-service/alembic/: env.py
ai-service/alembic/versions/: 421be74de12c_add_image_path_to_content_posts.py  a0b1c2d3e4f5_fix_scanstatus_enum_case.py  a1b2c3d4e5f6_add_report_file_path_to_scan_runs.py  a8b9c0d1e2f3_upgrade_analysis_fields.py  a9b8c7d6e5f4_video_clipper.py  b3c4d5e6f7a8_add_google_news_platform.py  b9c0d1e2f3a4_add_content_posts_table.py  c2d3e4f5a6b7_add_article_source_to_scan_runs.py  c4d5e6f7a8b9_fix_platform_enum_values.py  c5d6e7f8a9b0_add_is_promoted_flag.py  d1e2f3a4b5c6_move_enums_to_ai_schema.py  d5e6f7a8b9c0_add_google_news_topic_platform.py  d6e7f8a9b0c1_migrate_linkedin_to_tiktok.py  e1f2a3b4c5d6_add_publish_tables.py  e6f7a8b9c0d1_add_google_news_category_platform.py  f254285a977d_initial_schema.py  f2a3b4c5d6e7_multi_user_ai_schema.py  f7a8b9c0d1e2_add_hackernews_platform.py
ai-service/app/: config.py  dependencies.py  main.py
ai-service/app/agents/: analyzer.py  content_saver.py  reporter.py  state.py  supervisor.py  trend_analyzer.py
ai-service/app/agents/post_generator/: __init__.py  graph.py  prompts.py  runner.py  state.py
ai-service/app/agents/publish_post/: __init__.py  caption_assembler.py  constants.py  golden_hour.py  graph.py  publish_node.py  runner.py  scheduler_node.py  schemas.py  state.py  token_manager.py
ai-service/app/agents/scanners/: base.py  google_news.py  google_news_topic.py  google_trends.py  hackernews.py  instagram.py  tiktok.py  twitter.py  youtube.py
ai-service/app/agents/video_clipper/: graph.py  node.py  prompts.py  runner.py  schemas.py  state.py
ai-service/app/api/v1/: auth.py  deps.py  posts.py  publish.py  (+6 more)
ai-service/app/clients/: assemblyai_client.py  bfl_client.py  firecrawl_client.py  openai_client.py  rapidapi_client.py  tiktok_client.py
ai-service/app/core/: cache.py  cloudinary_uploader.py  dedup.py  exceptions.py  logging.py  progress.py  rate_limiter.py  retry.py  storage.py
ai-service/app/db/: session.py
ai-service/app/mcp/: server.py
ai-service/app/services/: article_pipeline.py  article_processor.py  article_schemas.py
ai-service/app/tools/: firecrawl_tool.py  google_trends_tool.py  hackernews_tool.py  instagram_tool.py  tiktok_tool.py  twitter_tool.py  youtube_tool.py
ai-service/app/utils/: async_helpers.py
ai-service/app/workers/: job_queue.py  video_worker.py
ai-service/scripts/: crawl_hackernews.py
(+209 files in other folders)
